first/k8s/web2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web2
  name: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: web2
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: development
            - name: PORT
              value: "3002"
          image: scottiedog45/second-container:latest
          imagePullPolicy: ""
          name: web2
          ports:
            - containerPort: 3002
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
