first/k8s/web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web2
  name: web2
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3002
      protocol: TCP
  selector:
    io.kompose.service: web2
status:
  loadBalancer: {}
