first/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
     - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: fe
              servicePort: 80
          - path: /first/(.*)
            backend:
              serviceName: web
              servicePort: 3000
          - path: /second/(.*)
            backend:
              serviceName: web2
              servicePort: 3003
